[package]
name = "yieldpay-factory"
version = "1.0.1"
authors = ["GoFundUST"]
edition = "2018"
repository = "https://github.com/GoFund-UST/smart-contracts"

description = "Pool contract for yieldpay. forked from pylon-core"
exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
#cw0="0.9.1"
cw2 = "0.15.1"
cw20 = "0.15.1"
cw721= "0.15.0"
yieldpay-core = { version = "1.0", path = "../../packages/yieldpay_core" }
base64 = "0.13.0"
#terraswap = "2.4.0"
#terra-cosmwasm = "2.2.0"
thiserror = "1.0"
#cosmwasm-bignumber = "2.2.0"
cosmwasm-std = { version = "1.1.3" }
cosmwasm-storage = { version = "1.1.3" }
cw-storage-plus = "0.15.1"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde-json-wasm= "0.4.1"
#snafu = { version = "0.7.1" }
protobuf = { version = "2", features = ["with-bytes"] }
#uint = "=0.9.1"

[build-dependencies]
protoc-rust = "2"

[dev-dependencies]
cosmwasm-schema = { version = "1.1.3" }

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
          --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
            --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
              cosmwasm/rust-optimizer:0.12.6"""
optimize-w32 = """docker run --rm -v c:\\users\\ihols\\GoFundUST\\smart-contracts:/code  \
            --mount type=volume,source=gofund_factory_cache,target=/code/target \
            --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
            cosmwasm/rust-optimizer:0.12.6"""
store = """terra-rust code store test ..\\..\\artifacts\\gofund_ust_factory.wasm"""
instantiate = """terra-rust code instantiate test ..\\..\\artifacts\\gofund_ust_factory.wasm .\\factory_init.json --admin same"""
migrate = """terra-rust code migrate test ..\\..\\artifacts\\gofund_ust_factory.wasm"""
